			Memo
			Reminds you about things
			by Thomas Leonard

30-May-2001
~~~~~~~~~~~
Switched to using ROX-Lib.

29-May-2001 (Release 0.1.1)
~~~~~~~~~~~
Added AppInfo file.

19-Jan-2001
~~~~~~~~~~~
Main window widgets don't grab the focus (looks better).

13-Jan-2001
~~~~~~~~~~~
Started.